# Flow-Ops-TMS

./: .gitignore  aliases.sh
api/: pyproject.toml
api/app/: main.py
api/app/core/: config.py
api/app/dependencies/: auth.py
api/app/routers/: allocation.py  auth.py  billing.py  carrier_invoices.py  carrier_management.py  carriers.py  core_platform.py  dispatches.py  documents.py  e2e.py  exc_yard.py  execution.py  financials.py  freight_audit.py  global_settings.py  master_data.py  nfr_ac.py  numbering.py  oms_events.py  order_releases.py  organizations.py  platform.py  purchase_orders.py  rating.py  shipments.py  status_models.py  tracking.py  (+1 more)
api/migrations/: 004_rating.sql  004_rating_seed.sql  004_rating_v2.sql  004a_rating_tables.sql  004b_rating_seed.sql  005_rate_type.sql  006_rate_structures.sql  007_fuel_surcharge.sql  007_fuel_surcharge_v2.sql  008_accessorials.sql  009_rate_versioning.sql  010_rating_breakdown.sql  011_client_charges.sql  012_billing_rules.sql  013_charge_allocations.sql  014_financials_view.sql  015_rerate_log.sql  016_reason_codes.sql  017_document_management.sql  017_document_management_v2.sql  018_master_data.sql  019_e2e_traceability.sql  020_core_platform.sql  021_carrier_management.sql  022_carrier_invoices.sql  023_allocation.sql  024_execution.sql  025_audit.sql  026_billing.sql  027_financials.sql  028_exc_yard.sql  029_int_rpt_sec_wf_ux.sql  030_nfr_ac.sql  migration_001_init.sql  migration_002_seed.sql  migration_003_workflows.sql  migration_004_status_models.sql  migration_005_numbering.sql  migration_006_global.sql
(+51 files in other folders)
